Should not be using new Long(...). Use Long.valueOf(...) instead.